--- a/src/css/app.scss
+++ b/src/css/app.scss
@@ -1,1 +1,7 @@
 // app global css in SCSS form
+
+input[type="number"]::-webkit-inner-spin-button,
+input[type="number"]::-webkit-outer-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
