--- a/src/css/quasar.variables.scss
+++ b/src/css/quasar.variables.scss
@@ -15,7 +15,6 @@
 $primary   : #1976D2;
 $secondary : #26A69A;
 $accent    : #9C27B0;
-
 $dark      : #1D1D1D;
 $dark-page : #121212;
 
@@ -23,3 +22,12 @@ $positive  : #21BA45;
 $negative  : #C10015;
 $info      : #31CCEC;
 $warning   : #F2C037;
+
+$faded     : #607d8b;
+
+.text-faded {
+  color: var(--q-faded) !important;
+}
+.bg-faded {
+  background: var(--q-faded) !important;
+}
